--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,90 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
+
     tools:context=".MainActivity">
 
-    <Button
-        style="@style/KeyStyle"
+    <ImageButton
         android:id="@+id/c_key"
-        android:background="@color/red"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="playC"
-        />
-
-    <Button
         style="@style/KeyStyle"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:background="@color/red"
+        android:onClick="playC"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="10dp" />
+
+    <ImageButton
         android:id="@+id/d_key"
         android:background="@color/orange"
+        app:layout_constraintTop_toBottomOf="@+id/c_key"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:onClick="playD"
         />
 
-    <Button
-        style="@style/KeyStyle"
+    <ImageButton
         android:id="@+id/e_key"
-        android:background="@color/yellow"
+        android:background="@color/red"
+        app:layout_constraintTop_toBottomOf="@+id/d_key"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:onClick="playE"
         />
 
-    <Button
-        style="@style/KeyStyle"
+    <ImageButton
         android:id="@+id/f_key"
         android:background="@color/green"
+        app:layout_constraintTop_toBottomOf="@+id/e_key"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:onClick="playF"
         />
 
-    <Button
-        style="@style/KeyStyle"
+    <ImageButton
         android:id="@+id/g_key"
         android:background="@color/turquoise"
+        app:layout_constraintTop_toBottomOf="@+id/f_key"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:onClick="playG"
         />
 
 
-    <Button
-        style="@style/KeyStyle"
+    <ImageButton
         android:id="@+id/a_key"
         android:background="@color/blue"
+        app:layout_constraintTop_toBottomOf="@+id/g_key"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:onClick="playA"
         />
 
-    <Button
-        style="@style/KeyStyle"
+    <ImageButton
         android:id="@+id/b_key"
         android:background="@color/purple"
+        app:layout_constraintTop_toBottomOf="@+id/a_key"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:onClick="playB"
         />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
